--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
   text-align: center;
 
-  //background-color: $background-color-main;
+  background-color: $background-color-main;
 
   &--index {
     display: none;
@@ -14,17 +14,40 @@
 
   &__social {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
-    margin-top: 30px;
-
-    //------- Временно ---------//
-    width: 177px;
+    margin-top: 33px;
+    width: 100%;
+    //width: 177px;
   }
 
   &__copyright {
-    margin-top: 33px;
+    margin-top: 38px;
+  }
+
+  &__link {
+    display: block;
+  }
+
+  &__item {
+    width: 43px;
+    height: 43px;
+    margin: 0 7px;
+    border: 3px solid rgba($blue--dark, 0.1);
+    border-radius: 50%;
+  }
+
+  &__item:hover {
+    border-color: $blue--dark;
+  }
+
+  &__item:active {
+    opacity: 0.1;
+  }
+
+  &__item img {
+    margin: auto 0;
   }
 }
 
@@ -37,24 +60,17 @@
     &__wrapper {
       display: flex;
       justify-content: space-between;
-      padding-top: 35px;
-      padding-bottom: 43px;
-
-      //------- Временно ---------//
-      min-height: 57px;
+      padding-top: 31px;
+      padding-bottom: 39px;
     }
 
     &__logo-link {
       display: block;
-
-      //------- Временно ---------//
-      width: 147px;
     }
 
     &__social {
+      width: 325px;
       margin-top: 0;
-      //------- Временно ---------//
-      width: 177px;
     }
 
     &__copyright {
@@ -66,8 +82,12 @@
 @media (min-width: $desktop-width) {
   .page-footer {
     &__wrapper {
-      padding-top: 102px;
+      padding-top: 67px;
       padding-bottom: 67px;
+    }
+
+    &__social {
+      margin-top: 7px;
     }
   }
 }
