--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
 
   &__wrapper {
-    margin-top: 126px;
+    margin-top: 111px;
     position: relative;
   }
 
@@ -13,7 +13,7 @@
 
     width: 130vw;
     height: 1050px;
-    top: 40px;
+    top: -78px;
     left: calc(-60vw + 50%);
     transform: rotate(-5deg);
 
@@ -58,6 +58,30 @@
     background-color: $background-color-table-header;
   }
 
+  &__element--hit {
+    position: relative;
+    overflow: hidden;
+  }
+
+  &__element--hit::before {
+    content: "хит";
+    display: block;
+    position: absolute;
+    width: 95px;
+    height: 27px;
+    top: 12px;
+    left: -24px;
+
+    font-family: $default-font;
+    font-size: 15px;
+    line-height: 21px;
+    color: $white;
+    text-transform: uppercase;
+
+    transform: rotate(-45deg);
+    background-color: $pink;
+  }
+
   &__tariff {
     font-family: $default-font;
     font-weight: bold;
@@ -70,18 +94,55 @@
     font-size: 24px;
   }
 
-  &__toggles {
+  &__toggles-list {
     text-align: center;
-    margin: 35px 0;
+    margin: 42px 0;
+    margin-bottom: 52px;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__toggle {
+    @include toggles();
+  }
+
+  &__cell-content {
+    position: relative;
+    //display: flex;
+    //justify-content: space-between;
+  }
+
+  &__function--off {
+    //position: relative;
+  }
+
+  &__function svg {
+    position: absolute;
+    top: 5px;
+    left: auto;
+    right: -4px;
+  }
+
+  &__function--on path{
+    fill: $green-leafy;
+  }
+
+  &__function--off path{
+    fill: $orange;
   }
 }
 
 @media (min-width: $tablet-width) {
   .price {
     &__wrapper {
-      padding-top: 104px;
+      padding-top: 87px;
       padding-bottom: 70px;
       @include wrapper();
+    }
+
+    &__wrapper::before {
+      top: 26px;
+      transform: rotate(-4deg);
     }
 
     &__table {
@@ -91,6 +152,7 @@
 
     &__element {
       width: 25%;
+      padding: 4px 22px;
     }
 
     &__element--additional {
@@ -111,6 +173,11 @@
       background-color: transparent;
     }
 
+    &__element--hit::before {
+      top: 4px;
+      left: -26px;
+    }
+
     &__tariff {
       font-size: 16px;
     }
@@ -123,8 +190,14 @@
       display: none;
     }
 
-    &__toggles {
+    &__toggles-list {
       display: none;
+    }
+
+    &__function svg {
+      position: relative;
+      top: 5px;
+      left: 40px;
     }
   }
 }
@@ -132,8 +205,13 @@
 @media (min-width: $desktop-width) {
   .price {
     &__wrapper {
-      padding-top: 171px;
+      padding-top: 160px;
       padding-bottom: 97px;
+    }
+
+    &__wrapper::before {
+      transform: rotate(-4deg);
+      top: 50px;
     }
 
     &__element--header {
@@ -155,6 +233,18 @@
     &__element--additional {
       box-sizing: border-box;
       padding: 14px 20px;
+    }
+
+    &__element::before {
+      width: 113px;
+      height: 29px;
+      top: 10px;
+      left: -30px;
+    }
+
+    &__function svg {
+      top: 7px;
+      left: calc(50% - 15px);
     }
   }
 }
