--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -32,6 +32,8 @@
   }
 
   &--green {
+    font-size: 18px;
+    text-transform: uppercase;
     line-height: 30px;
     color: $button-text-color--green;
     border: 2px solid $button-color--green;
