--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 422px;
+    height: 425px;
   }
 
   &__picture {
@@ -36,6 +36,7 @@
     display: block;
     order: 2;
     margin: 0 auto;
+    margin-top: 10px;
   }
 
   &__item:last-child &__title {
@@ -108,12 +109,14 @@
       padding-left: calc(50%);
       padding-top: 33px;
       padding-bottom: 7px;
+      margin-top: 5px;
 
       text-align: left;
     }
 
     &__item {
-      margin: 36px 0;
+      margin-top: 36px;
+      margin-bottom: 36px;
     }
 
     &__item:last-child {
@@ -123,6 +126,7 @@
 
     &__item:last-child &__picture {
       position: absolute;
+      margin: 0;
       top: 0;
       left: 0;
     }
@@ -150,7 +154,7 @@
 
     &__slogan {
       margin-top: 67px;
-      margin-bottom: 77px;
+      margin-bottom: 75px;
 
       font-size: 50px;
       line-height: 60px;
@@ -183,6 +187,7 @@
 
     &__item:last-child &__picture {
       position: static;
+      margin: 0 auto;
     }
 
     &__item:last-child &__title,
