--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,14 +5,15 @@
   position: relative;
 
   background-color: $background-color-intro;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-position: center 0;
   background-repeat: no-repeat;
 
   &__page-title {
     display: block;
     margin-top: 28px;
-    margin-bottom: 82px;
+    //margin-bottom: 82px;
+    margin-bottom: 52px;
     padding: 0 20px;
 
     font-weight: 200;
@@ -58,13 +59,14 @@
 
   &__item {
     //----- Временно для сетки -------//
-    min-height: 56px;
+    //min-height: 56px;
   }
 
   &__legend {
     font-size: 14px;
     line-height: 24px;
-    margin: 22px 0;
+    margin: 14px 0;
+    margin-bottom: 22px;
   }
 }
 
@@ -74,28 +76,25 @@
 
     &__page-title {
       font-size: 50px;
+
+      margin-top: 69px;
+      margin-bottom: 81px;
     }
 
     &__wrapper {
       padding-top: 110px;
-      padding-bottom: 7px;
+      padding-bottom: 1px;
 
       line-height: 60px;
     }
 
     &__wrapper--index-page {
       padding-top: 109px;
-      padding-bottom: 85px;
-
+      padding-bottom: 95px;
 
       background-image: url("../img/iphone-hand-tablet@1x.png");
       background-position: -20px bottom;
       background-repeat: no-repeat;
-    }
-
-    &__page-title {
-      margin-top: 69px;
-      margin-bottom: 141px;
     }
 
     &__download-links-wrapper {
@@ -121,12 +120,16 @@
     &__list {
       box-sizing: border-box;
       padding: 0 32px;
-      margin-bottom: 36px;
+      margin-bottom: 14px;
+    }
+
+    &__item {
+      margin: auto 0;
     }
 
     &__legend {
       width: 310px;
-      //margin-bottom: 102px;
+      margin: 14px 0;
 
       font-size: 18px;
       line-height: 24px;
@@ -145,11 +148,11 @@
     &__wrapper--index-page {
       background-image: url("../img/iphone-hand-desktop@1x.png");
       background-position: calc(50% + 72px) bottom;
-      padding-bottom: 100px;
+      padding-bottom: 109px;
     }
 
     &__page-title {
-      padding: 0 141px;
+      padding: 0 96px;
       margin-top: 63px;
       margin-bottom: 102px;
     }
@@ -175,12 +178,11 @@
     }
 
     &__list {
-      margin-bottom: 55px;
+      margin-bottom: 33px;
     }
 
     &__legend {
       width: 311px;
-      //margin-bottom: 115px;
     }
   }
 }
