--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -3,17 +3,17 @@
   &__item {
     text-align: center;
     vertical-align: center;
-
+    //background-color: $background-color-header--opened;
     box-shadow: 0 1px 0 0 $black, inset 0 1px 0 0 rgba($white, 0.15);
 
-    min-height: 64px;
+    //min-height: 64px;
   }
 
-  &__item:hover a {
+  &__item:hover a[href] {
     color: $menu-mobile-color--hover;
   }
 
-  &__item:active a {
+  &__item:active a[href] {
     color: $menu-mobile-color--active;
   }
 
@@ -45,6 +45,23 @@
       font-weight: normal;
       font-size: 18px;
       text-transform: none;
+      box-shadow: none;
+    }
+
+    &__item--active {
+      position: relative;
+    }
+
+    &__item--active::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: $white;
+
+      bottom: 33px;
+      left: 1px;
     }
 
     &__link {
