--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/cards";
 @import "blocks/post-content";
 @import "blocks/page-footer";
+@import "blocks/copyright";
 @import "blocks/contacts";
 @import "blocks/upload";
 @import "blocks/editing";
