добавляет декоративные элементы для form.html и фиксит для других страниц

--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -17,6 +17,7 @@
 
   &__wrapper {
     padding-top: 31px;
+    padding-bottom: 15px;
     @include wrapper();
   }
 }
@@ -46,6 +47,10 @@
 
 @media (min-width: $desktop-width) {
   .competition {
+    &__wrapper {
+      padding-bottom: 0;
+    }
+
     &__slogan {
       padding: 0 68px;
     }
