--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   background-color: $background-color-intro;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: center 0;
   background-repeat: no-repeat;
 
@@ -63,10 +63,11 @@
   }
 
   &__legend {
-    font-size: 14px;
-    line-height: 24px;
     margin: 14px 0;
     margin-bottom: 22px;
+
+    font-size: 14px;
+    line-height: 24px;
   }
 }
 
@@ -164,7 +165,7 @@
     &__slogan {
       padding-left: 31px;
       padding-right: 33px;
-      margin-top: 107px;
+      margin-top: 108px;
 
       font-size: 50px;
       line-height: 60px;
@@ -183,6 +184,9 @@
 
     &__legend {
       width: 311px;
+      margin-left: -6px;
+
+      font-weight: lighter;
     }
   }
 }
