--- a/source/sass/blocks/upload.scss
+++ b/source/sass/blocks/upload.scss
@@ -83,6 +83,7 @@
       padding-right: 60px;
       padding-bottom: 57px;
       padding-left: 80px;
+      margin-bottom: 28px;
     }
 
     &__editing-wrapper::before {
