--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,4 +1,8 @@
 .form {
+  & fieldset {
+    border-radius: 2px;
+  }
+
   &__item {
     margin-bottom: 52px;
   }
@@ -15,7 +19,7 @@
   &__input--contacts,
   &__label--radio,
   &__label--checkbox {
-    letter-spacing: 0.3px;
+    letter-spacing: 0.4px;
   }
 
 
@@ -28,6 +32,7 @@
     line-height: 30px;
     text-transform: uppercase;
     color: $text-color--additional;
+    letter-spacing: 0;
   }
 
   &__input--name,
@@ -37,6 +42,7 @@
     box-sizing: border-box;
     width: 100%;
     border: 2px solid $border-color;
+    border-radius: 2px;
     padding: 15px 21px;
 
     font-family: $default-font;
@@ -63,12 +69,65 @@
 
   &__label--checkbox,
   &__label--radio {
+    position: relative;
     padding-left: 70px;
     font-family: $default-font;
     font-weight: 200;
     font-size: 18px;
     line-height: 30px;
     color: $text-color;
+  }
+
+  &__label--checkbox::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    border-radius: 2px;
+    top: -6px;
+    left: 0;
+    border: 2px solid $border-color;
+    background-color: $background-color-main;
+  }
+
+  &__input:checked + &__label--checkbox::before {
+    background-image: url("../img/icon-yes.svg");
+    background-repeat: no-repeat;
+    background-position: 7px 9px;
+  }
+
+  &__label--radio::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    top: -4px;
+    left: 0;
+    border: 2px solid $border-color;
+    background-color: $background-color-main;
+  }
+
+  &__input:checked + &__label--radio::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    top: 8px;
+    left: 12px;
+    background-color: $pink;
+  }
+
+  &__label:hover::before {
+    border-color: $text-color;
+  }
+
+  &__label:active::before {
+    border-color: $pink;
   }
 
   &__achievements-wrapper {
@@ -131,7 +190,7 @@
 
   &__platform-wrapper {
     position: relative;
-    margin-top: 25px;
+    margin-top: 26px;
   }
 
   &__platform-wrapper::before {
@@ -197,6 +256,7 @@
     margin-bottom: 42px;
     margin-top: -60px;
     min-height: 201px;
+    border-radius: 2px;
 
     font-family: $default-font;
     font-weight: normal;
@@ -210,8 +270,8 @@
   &__button {
     width: 100%;
     min-height: 62px;
-    border-radius: 0;
-    margin-bottom: 37px;
+    border-radius: 2px;
+    margin-bottom: 35px;
   }
 
   &__designation {
@@ -251,7 +311,7 @@
 
     &__name {
       order: 0;
-      padding-top: 49px;
+      padding-top: 48px;
       padding-bottom: 0;
     }
 
@@ -261,7 +321,7 @@
     }
 
     &__legend {
-      padding: 0 35px;
+      padding: 0 33px;
       margin: 0 auto;
     }
 
@@ -298,7 +358,7 @@
 
     &__achievements {
       box-sizing: border-box;
-      margin-top: 54px;
+      margin-top: 58px;
       padding-top: 48px;
       padding-right: 58px;
       padding-left: 58px;
@@ -309,19 +369,29 @@
       padding-left: 60px;
     }
 
+    &__label--radio::before {
+      top: -7px;
+      left: 10px;
+    }
+
+    &__input:checked + &__label--radio::after {
+      top: 5px;
+      left: 22px;
+    }
+
     &__contacts {
       @include fieldset-border();
       margin-top: 57px;
       padding-top: 37px;
-      padding-right: 60px;
-      padding-left: 60px;
+      padding-right: 58px;
+      padding-left: 58px;
       order: 2;
     }
 
     &__input--contacts {
-      border-right-width: 60px;
+      border-right-width: 62px;
       margin-bottom: 8px;
-      padding-left: 17px;
+      padding-left: 18px;
     }
 
     &__label--contacts {
@@ -330,8 +400,8 @@
     }
 
     &__label-value--contacts {
-      padding-left: 17px;
-      margin-bottom: 30px;
+      padding-left: 19px;
+      margin-bottom: 28px;
     }
 
     &__legend--contacts {
@@ -340,7 +410,7 @@
     }
 
     &__message {
-      padding: 20px 60px;
+      padding: 20px 58px;
       padding-top: 37px;
       padding-bottom: 47px;
       margin-top: 58px;
@@ -370,8 +440,8 @@
     }
 
     &__button-designation-wrapper {
-      margin-top: 68px;
-      margin-bottom: 53px;
+      margin-top: 66px;
+      margin-bottom: 41px;
       order: 5;
       display: flex;
       justify-content: space-between;
@@ -388,7 +458,7 @@
 
     &__name {
       width: 50%;
-      padding-top: 21px;
+      padding-top: 20px;
     }
 
     &__platform-wrapper {
@@ -486,7 +556,8 @@
     &__message {
       width: 100%;
       margin-top: 57px;
-      padding-bottom: 37px;
+      padding-top: 35px;
+      padding-bottom: 38px;
     }
 
     &__legend {
@@ -494,7 +565,7 @@
     }
 
     &__text {
-      padding-top: 11px;
+      padding-top: 13px;
       padding-bottom: 21px;
       min-height: 0;
     }
