--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -91,10 +91,18 @@
     background-color: $background-color-main;
   }
 
-  &__input:checked + &__label--checkbox::before {
-    background-image: url("../img/icon-yes.svg");
-    background-repeat: no-repeat;
-    background-position: 7px 9px;
+  &__input:checked + &__label--checkbox::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 8px;
+    height: 20px;
+    top: -1px;
+    left: 15px;
+    border: solid $pink;
+    border-width: 0 2px 2px 0;
+    //border-radius: 2px;
+    transform: rotate(45deg);
   }
 
   &__label--radio::before {
