--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,12 +2,13 @@
   padding-top: 45px;
   position: relative;
   text-align: center;
+  overflow: hidden;
 
   &__wrapper {
     @include wrapper();
 
     // ВРЕМЕННО ВМЕСТО КАРТЫ
-    padding-bottom: 220px;
+    //padding-bottom: 220px;
   }
 
   &__text {
@@ -34,6 +35,10 @@
     color: $text-color;
   }
 
+  &__come-to-us {
+    margin-bottom: 20px;
+  }
+
   &__link,
   &__address {
     display: block;
@@ -48,52 +53,52 @@
   &__map {
     display: block;
     position: relative;
+    width: 100vw;
+    height: 220px;
 
-    overflow: hidden;
+
+    //overflow: hidden;
   }
 
-  &__map::before {
+  &::before {
     content: "";
     display: block;
     position: absolute;
     z-index: 1;
 
-    width: 100vw;
-    height: 100%;
+    width: 152vw;
+    height: 100px;
+
+    top: 396px;
+    left: calc(-76vw + 50%);
 
     mask: url("../img/bg-triangle-white-footer.svg");
-    mask-size: 100%;
+    mask-size: contain;
     mask-position: 0 0;
     mask-repeat: no-repeat;
     background-color: $background-color-main;
-  }
-
-  &__map-image {
-    margin-top: -426px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .contacts {
-    padding-top: 50px;
+    padding-top: 46px;
 
     &__wrapper {
       margin-bottom: 6px;
-      // ВРЕМЕННО ВМЕСТО КАРТЫ
-      padding-bottom: 400px;
     }
 
     &__slogan {
       margin-bottom: 0;
 
       font-size: 40px;
-      line-height: 45px;
+      line-height: 47px;
     }
 
     &__links {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
     }
 
     &__phone,
@@ -101,8 +106,24 @@
     &__come-to-us {
       display: block;
       width: 298px;
-      margin-top: 43px;
-      margin-bottom: 0;
+      margin-top: 41px;
+      margin-bottom: 5px;
+    }
+
+    &__come-to-us {
+      margin: 41px auto 5px;
+    }
+
+    &::before {
+      width: 150vw;
+      height: 100px;
+
+      top: 373px;
+      left: calc(-72.5vw + 50%);
+    }
+
+    &__map {
+      height: 390px;
     }
   }
 }
@@ -110,10 +131,7 @@
 @media (min-width: $desktop-width) {
   .contacts {
     &__wrapper {
-      padding-top: 15px;
-
-      // ВРЕМЕННО ВМЕСТО КАРТЫ
-      padding-bottom: 516px;
+      padding-top: 16px;
     }
 
     &__slogan {
@@ -122,7 +140,7 @@
     }
 
     &__links {
-      margin-top: 9px;
+      margin-top: 13px;
       justify-content: space-between;
     }
 
@@ -141,6 +159,19 @@
 
     &__email {
       order: 3;
+    }
+
+    &__map {
+      height: 510px;
+    }
+
+    &::before {
+      width: 1200px;
+      height: 134px;
+
+      top: 356px;
+      left: calc(-50.5vw + 50%);
+      //background-color: black;
     }
   }
 }
