--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -50,6 +50,16 @@
     color: $text-color--additional;
   }
 
+  &__email &__link:hover {
+    color: $blue--dark;
+    text-decoration: underline;
+  }
+
+  &__email &__link:active {
+    color: rgba($blue--dark, 0.3);
+    text-decoration: none;
+  }
+
   &__map {
     display: block;
     position: relative;
