--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -51,10 +51,17 @@ $retina-dppx: 1.5dppx;
     box-sizing: border-box;
     width: 6px;
     height: 6px;
-    border: 3px solid
-    #283645;
+    border: 3px solid rgba($blue--dark, 0.3);
     border-radius: 50%;
-    background-color: #ffffff;
+    background-color: $white;
+  }
+
+  &:hover::before {
+    border-color: rgba($blue--dark, 0.6);
+  }
+
+  &:active::before {
+    border-color: rgba($blue--dark, 0.1);
   }
 
   &--active::before {
@@ -62,6 +69,12 @@ $retina-dppx: 1.5dppx;
     height: 12px;
     margin-left: -2px;
     margin-top: -2px;
+    border-color: $blue--dark;
+  }
+
+  &--active:hover::before,
+  &--active:active::before {
+    border-color: $blue--dark;
   }
 }
 
