--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -10,7 +10,7 @@
   background-position: center 0;
   background-repeat: no-repeat;
 
-  @media (min-resolution: $retina-dppx) {
+  @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: 320px auto;
     background-position-y: -3px;
@@ -40,7 +40,7 @@
     background-position: 0 175px;
     background-repeat: no-repeat;
 
-    @media (min-resolution: $retina-dppx) {
+    @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
       background-image: url("../img/iphone-hand-mobile@2x.png");
       background-size: 256px auto;
     }
@@ -96,7 +96,7 @@
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
 
-    @media (min-resolution: $retina-dppx) {
+    @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: 1200px auto;
       background-position-y: 1px;
@@ -124,7 +124,7 @@
       background-position: -20px bottom;
       background-repeat: no-repeat;
 
-      @media (min-resolution: $retina-dppx) {
+      @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
         background-image: url("../img/iphone-hand-tablet@2x.png");
         background-size: 701px auto;
       }
@@ -177,7 +177,7 @@
 
     background-image: url("../img/bg-back-desktop@1x.jpg");
 
-    @media (min-resolution: $retina-dppx) {
+    @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
       background-image: url("../img/bg-back-desktop@2x.jpg");
       background-size: 2555px auto;
       background-position-y: 12px;
@@ -192,7 +192,7 @@
       background-position: calc(50% + 72px) bottom;
       padding-bottom: 106px;
 
-      @media (min-resolution: $retina-dppx) {
+      @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
         background-image: url("../img/iphone-hand-desktop@2x.png");
         background-size: 1050px auto;
       }
