--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,7 @@ $mobile-padding: 20px;
 $tablet-padding: 20px;
 $desktop-padding: 10px;
 
+$retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 
 @mixin wrapper() {
