--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/editing";
 @import "blocks/competition";
 @import "blocks/form";
+@import "blocks/modal";
 
 // --------- Временно для сетки -------------- //
 //@import "outline";
