--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,24 @@ $desktop-padding: 10px;
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 @mixin wrapper() {
   margin: 0 auto;
   @media (min-width: $mobile-width) {
